--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>My Family</title>
   </head>
   <body>
-    <h1>Hello, people! Today You Are Going To Learn100 About My Family Zico, Timothy, Marie, Hennry, Leonardo or Leo, and Maggie. </h1>
+    <h1>Hello, people! Today You Are Going To Learn About My Family Zico, Timothy, Marie, Hennry, Leonardo or Leo, and Maggie. </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
